--- a/pages/18905.html
+++ b/pages/18905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -762,6 +762,86 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
 </ul></div>
+
+<h4 id="measure_and_probability_theory">Measure and probability theory</h4>
+
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/measure+theory">measure theory</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a></strong></p><h2 id="measure_theory">Measure theory</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/measurable+space">measurable space</a>, <a class="existingWikiWord" href="/nlab/show/measurable+locale">measurable locale</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/measure">measure</a>, <a class="existingWikiWord" href="/nlab/show/measure+space">measure space</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/von+Neumann+algebra">von Neumann algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/geometric+measure+theory">geometric measure theory</a></p>
+</li>
+</ul><h2 id="probability_theory">Probability theory</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/probability+space">probability space</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/probability+distribution">probability distribution</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/state">state</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/states+in+AQFT+and+operator+algebra">in AQFT and operator algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/GNS+construction">GNS construction</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fell%27s+theorem">Fell's theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/entropy">entropy</a>, <a class="existingWikiWord" href="/nlab/show/relative+entropy">relative entropy</a></p>
+</li>
+</ul><h2 id="information_geometry">Information geometry</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/information+geometry">information geometry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/information+metric">information metric</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Wasserstein+metric">Wasserstein metric</a></p>
+</li>
+</ul><h2 id="thermodynamics">Thermodynamics</h2><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/second+law+of+thermodynamics">second law of thermodynamics</a>, <a class="existingWikiWord" href="/nlab/show/generalized+second+law+of+theormodynamics">generalized second law</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ergodic+theory">ergodic theory</a></p>
+</li>
+</ul><h2 id="theorems">Theorems</h2><ul>
+<li><a class="existingWikiWord" href="/nlab/show/Riesz+representation+theorem">Riesz representation theorem</a></li>
+</ul><div>
+<p>
+  <a href="/nlab/edit/measure+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
@@ -921,6 +1001,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/lattice+gauge+theory">lattice gauge theory</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/infinite-temperature+thermal+field+theory">infinite-temperature thermal field theory</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1075,9 +1159,25 @@ margin-left: 0em;
 <li id="AllenFolacciGibbons87">B. Allen, A. Folacci, <a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, <em>Anti-de Sitter space at finite temperature</em>, Physics Letters B Volume 189, Issue 3, 7 May 1987, Pages 304-310 (<a href="https://doi.org/10.1016/0370-2693(87)91437-7">doi:10.1016/0370-2693(87)91437-7</a>)</li>
 </ul>
 
-<p>The perturbative expansion of thermal field theory around the infinite-temperature-limit (i.e. around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\beta = 1/T = 0</annotation></semantics></math>) is discussed in</p>
+<p>The expansion of thermal field theory around the <a class="existingWikiWord" href="/nlab/show/infinite-temperature+thermal+field+theory">infinite-temperature-limit</a> (i.e. around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\beta = 1/T = 0</annotation></semantics></math>, i.e. <a class="existingWikiWord" href="/nlab/show/KK-reduction">KK-reduction</a> in compact/periodic Euclidean time) is discussed in</p>
 
 <ul>
+<li id="Ginsparg80">
+<p><a class="existingWikiWord" href="/nlab/show/Paul+Ginsparg">Paul Ginsparg</a>, <em>First and second order phase transitions in gauge theories at finite temperature</em>, Nuclear Physics B Volume 170, Issue 3, 15 December 1980, Pages 388-408 (<a href="https://doi.org/10.1016/0550-3213(80)90418-6">doi:10.1016/0550-3213(80)90418-6</a>)</p>
+</li>
+
+<li id="AppelquistPisarski81">
+<p>Thomas Appelquist, Robert D. Pisarski, <em>High-temperature Yang-Mills theories and three-dimensional quantum chromodynamics</em>, Phys. Rev. D 23, 2305 (1981) (<a href="https://doi.org/10.1103/PhysRevD.23.2305">doi:10.1103/PhysRevD.23.2305</a>)</p>
+</li>
+
+<li id="Nadkarni83">
+<p>Sudhir Nadkarni, <em>Dimensional reduction in finite-temperature quantum chromodynamics</em>, Phys. Rev. D 27, 917 (1983) (<a href="https://doi.org/10.1103/PhysRevD.27.917">doi:10.1103/PhysRevD.27.917</a>)</p>
+</li>
+
+<li id="Nadkarni88">
+<p>Sudhir Nadkarni, <em>Dimensional reduction in finite-temperature quantum chromodynamics. II</em>, Phys. Rev. D 38, 3287 (1988) (<a href="https://doi.org/10.1103/PhysRevD.38.3287">doi:10.1103/PhysRevD.38.3287</a>)</p>
+</li>
+
 <li id="Jourjine84">
 <p>Alexander N Jourjine, <em>Quantum field theory in the infinite temperature limit</em>, Annals of Physics Volume 155, Issue 2, July 1984, Pages 305-332 (<a href="https://doi.org/10.1016/0003-4916(84)90003-4">doi:10.1016/0003-4916(84)90003-4</a>)</p>
 </li>
@@ -1089,6 +1189,20 @@ margin-left: 0em;
 <li>
 <p>T. Reisz, <em>Realization of dimensional reduction at high temperature</em>, Z. Phys. C - Particles and Fields (1992) 53: 169 (<a href="https://doi.org/10.1007/BF01483886">doi:10.1007/BF01483886</a>)</p>
 </li>
+
+<li id="Braaten95">
+<p>Eric Braaten, <em>Solution to the Perturbative Infrared Catastrophe of Hot Gauge Theories</em>, Phys. Rev. Lett. 74, 2164 (1995) (<a href="https://doi.org/10.1103/PhysRevLett.74.2164">doi:10.1103/PhysRevLett.74.2164</a>)</p>
+</li>
+
+<li id="KajantieaLaineRummukainenShaposhnikov96">
+<p>K. Kajantiea, M. Laine, K. Rummukainen, M. Shaposhnikov, <em>Generic rules for high temperature dimensional reduction and their application to the standard model</em>, Nuclear Physics B Volume 458, Issues 1–2, 1 January 1996, Pages 90-136 (<a href="https://doi.org/10.1016/0550-3213(95)00549-8">doi:10.1016/0550-3213(95)00549-8</a>)</p>
+</li>
+</ul>
+
+<p>and specifically with an eye to discussion of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> in</p>
+
+<ul>
+<li id="BlaizotIancuRebhan03">Jean-Paul Blaizot, Edmond Iancu, Anton Rebhan, <em>Thermodynamics of the high temperature quark gluon plasma</em>, Quark–Gluon Plasma 3, pp. 60-122 (2004) (<a href="https://arxiv.org/abs/hep-ph/0303185">arXiv:hep-ph/0303185</a>, <a href="http://inspirehep.net/record/615570">spire:615570</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1112,14 +1226,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 10:05:56.
+  Last revised on November 17, 2018 at 09:45:17.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
