--- a/pages/8209.html
+++ b/pages/8209.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9284/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9284/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -897,6 +897,7 @@ margin-left: 0em;
 <li><a href='#nonperturbative_regime'>Non-perturbative regime</a></li>
 <li><a href='#perturbative_regime'>Perturbative regime</a></li>
 </ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -910,12 +911,12 @@ margin-left: 0em;
 <h2 id="idea">Idea</h2>
 
 <p>The <em>quark-gluon plasma</em> is the <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase of matter</a> of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> at extremely high <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a>. At high temperature <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> are not <a class="existingWikiWord" href="/nlab/show/confinement">confined</a> to <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> but propagate freely together with the <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a>, forming a “quark-gluon soup”. Since this is analogous to an ordinary <a class="existingWikiWord" href="/nlab/show/plasma">plasma</a> which is a <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> where <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a> and <a class="existingWikiWord" href="/nlab/show/protons">protons</a> are no longer <a class="existingWikiWord" href="/nlab/show/bound+state">bound</a> to <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> but propagate freely, one speaks of <em>quark-gluon plasma</em>.</p>
-
-<p><span class="newWikiWord">QCDPhaseDiagram.jpg<a href="/nlab/files/QCDPhaseDiagram.jpg">?</a></span></p>
 <center>
 <img src="https://ncatlab.org/nlab/files/QCDPhaseDiagram.jpg" width="400" />
 </center>
 <blockquote>
+<p><strong>Schematic <a class="existingWikiWord" href="/nlab/show/phase+diagram">phase diagram</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</strong> The vertical axis indicates <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math>, the horizontal axis indicates <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a> <a class="existingWikiWord" href="/nlab/show/density">density</a>. At low enough tempeterature <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> only appear as <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>). But above a critical temperature these <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> break apart (deconfinement) and <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> may exist freely. This <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is the <em>quark-gluon plasma</em>.</p>
+
 <p>graphics grabbed from <a href="#Blaizot03">Blaizot 03</a>.</p>
 </blockquote>
 
@@ -928,6 +929,12 @@ margin-left: 0em;
 <h3 id="perturbative_regime">Perturbative regime</h3>
 
 <p>At yet higher energies, the quark-gluon plasma is eventually supposed to be weakly <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupled</a> again, due to <a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a> (e.g. <a href="#Blaizot03">Blaizot 03</a>)</p>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li>The quark-gluon plasma is naturally studied in terms of <a class="existingWikiWord" href="/nlab/show/infinite-temperature+thermal+field+theory">infinite-temperature thermal field theory</a> (<a href="#BlaizotIancuRebhan03">Blaizot-Iancu-Rebhan 03, section 2.2.4</a>, <a href="#Blaizot04">Blaizot 04, around p. 17</a>)</li>
+</ul>
 
 <h2 id="references">References</h2>
 
@@ -942,8 +949,12 @@ margin-left: 0em;
 <p>Roman Pasechnik, Michal Šumbera, <em>Phenomenological Review on Quark-Gluon Plasma: Concepts vs. Observations</em>, Universe 2017, 3(1), 7 (<a href="https://arxiv.org/abs/1611.01533">arXiv:1611.01533</a>)</p>
 </li>
 
-<li id="Blaizot03">
+<li id="BlaizotIancuRebhan03">
 <p>Jean-Paul Blaizot, Edmond Iancu, Anton Rebhan, <em>Thermodynamics of the high temperature quark gluon plasma</em>, Quark–Gluon Plasma 3, pp. 60-122 (2004) (<a href="https://arxiv.org/abs/hep-ph/0303185">arXiv:hep-ph/0303185</a>, <a href="http://inspirehep.net/record/615570">spire:615570</a>)</p>
+</li>
+
+<li id="Blaizot04">
+<p>Jean-Paul Blaizot, around p. 17 of <em>Thermodynamics of the high temperature Quark-Gluon Plasma</em>, AIP Conf. Proc. 739, 63-96 (2004) (<a href="https://doi.org/10.1063/1.1843592">doi:10.1063/1.1843592</a>)</p>
 </li>
 </ul>
 
@@ -955,7 +966,7 @@ margin-left: 0em;
 
 <h3 id="nonperturbative_aspects">Non-perturbative aspects</h3>
 
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/non-perturvative+effects">non-perturvative effects</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>:</p>
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>:</p>
 
 <ul>
 <li id="Shuryak01">
@@ -967,7 +978,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Further discucssion in relation to <a class="existingWikiWord" href="/nlab/show/instantons+in+QCD">instantons in QCD</a> includes</p>
+<p>Further discussion in relation to <a class="existingWikiWord" href="/nlab/show/instantons+in+QCD">instantons in QCD</a> includes</p>
 
 <ul>
 <li>Nikolai Kochelev, <em>Ultra-light Glueballs in Quark-Gluon Plasma</em> (<a href="http://arxiv.org/abs/1501.07002">arXiv:1501.07002</a>)</li>
@@ -1038,14 +1049,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 08:55:49.
+  Last revised on November 17, 2018 at 09:56:29.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
