--- a/pages/10305.html
+++ b/pages/10305.html
@@ -907,7 +907,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/atomic+nuclei">atomic nuclei</a> are bound states of certain <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>, nameluy of <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a> (<a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/atomic+nuclei">atomic nuclei</a> are bound states of certain <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>, namely of <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a> (<a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>)</p>
 </li>
 
 <li>
@@ -950,14 +950,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 08:52:17.
+  Last revised on November 17, 2018 at 09:24:16.
   See the <a href="https://ncatlab.org/nlab/history/bound state" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bound state/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
