--- a/pages/19942.html
+++ b/pages/19942.html
@@ -927,7 +927,7 @@ margin-left: 0em;
 <h3 id="general">General</h3>
 
 <ul>
-<li><a href="https://www.bnl.gov/rhic/">RHIC websote</a></li>
+<li><a href="https://www.bnl.gov/rhic/">RHIC website</a></li>
 </ul>
 
 <p>See also</p>
@@ -955,14 +955,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 17, 2018 at 03:53:52.
+  Last revised on November 17, 2018 at 09:11:27.
   See the <a href="https://ncatlab.org/nlab/history/RHIC" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RHIC" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/RHIC" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RHIC/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/RHIC" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RHIC" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/RHIC/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
