--- a/pages/19943.html
+++ b/pages/19943.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -900,7 +900,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <em>plasma</em> is a <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/baryon">baryonic</a> <a class="existingWikiWord" href="/nlab/show/matter">matter</a> at <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> high enough that <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a> and <a class="existingWikiWord" href="/nlab/show/nuclei">nuclei</a> do not form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/atoms">atoms</a>) but each propate freely.</p>
+<p>A <em>plasma</em> is a <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/baryon">baryonic</a> <a class="existingWikiWord" href="/nlab/show/matter">matter</a> at <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> high enough that <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a> and <a class="existingWikiWord" href="/nlab/show/nuclei">nuclei</a> do not form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/atoms">atoms</a>) but each propagate freely.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -919,14 +919,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 17, 2018 at 08:52:35.
+  Last revised on November 17, 2018 at 09:12:43.
   See the <a href="https://ncatlab.org/nlab/history/plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plasma/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
