--- a/pages/4863.html
+++ b/pages/4863.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1904/#Item_14" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1904/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -407,8 +407,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
+</ul><table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
 </tbody></table><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
@@ -1779,9 +1779,14 @@ margin-left: 0em;
 <li><a href='##KKReductionOf11dSupergravity'>KK-Reduction of 11d supergravity</a></li>
 <li><a href='#high_codimension_compactification_of__super_yangmills'>High codimension compactification of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi><mo>=</mo><mn>10</mn></mrow><annotation encoding="application/x-tex">D=10</annotation></semantics></math> super Yang-Mills</a></li>
 <li><a href='#CascadedOfKKReductionsFromHolographicBoundaries'>Cascades of KK-reductions</a></li>
+<li><a href='#InfiniteTemperatureThermalFieldTheory'>Infinite-temperature thermal field theory</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#References'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#ReferencesInWickrotatedThermalFieldTheory'>In Wick-rotated thermal field theory</a></li>
+</ul>
 </ul>
 </div>
 
@@ -1996,6 +2001,14 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_7f147e85756bbfb7faaaaac057cbcfb3d3801bb5_15"><semantics><mrow><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mo stretchy="false">↓</mo></mrow><annotation encoding="application/x-tex">\;\;\;\; \downarrow</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> on <a class="existingWikiWord" href="/nlab/show/Riemann+surface">Riemann surface</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/A-model">A-model</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_7f147e85756bbfb7faaaaac057cbcfb3d3801bb5_16"><semantics><mrow><msub><mi>Bun</mi> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">Bun_G</annotation></semantics></math> and <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_7f147e85756bbfb7faaaaac057cbcfb3d3801bb5_17"><semantics><mrow><msub><mi>Loc</mi> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">Loc_G</annotation></semantics></math>, <a class="existingWikiWord" href="/nlab/show/geometric+Langlands+correspondence">geometric Langlands correspondence</a></td></tr>
 </tbody></table>
+<h3 id="InfiniteTemperatureThermalFieldTheory">Infinite-temperature thermal field theory</h3>
+
+<p>With the formulation of <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">thermal field theory</a> via <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> as a <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on a <a class="existingWikiWord" href="/nlab/show/Riemannian+manifold">Riemannian manifold</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mn>3</mn></msub><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow><annotation encoding="application/x-tex">X_3 \times S^1_\beta</annotation></semantics></math> whose compact/periodic Euclidean time runs along a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow><annotation encoding="application/x-tex">S^1_\beta</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta = 1/T</annotation></semantics></math>, the limit of infinite temperature corresponds to the <a class="existingWikiWord" href="/nlab/show/limit+of+a+sequence">limit</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\beta \to 0</annotation></semantics></math> in which this <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <a class="existingWikiWord" href="/nlab/show/fiber">fiber</a> shrinks away.</p>
+
+<p>In terms of the thermal <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mn>3</mn></msub><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow><annotation encoding="application/x-tex">X_3 \times S^1_\beta</annotation></semantics></math> therefore the <a class="existingWikiWord" href="/nlab/show/infinite-temperature+thermal+field+theory">infinite-temperature limit</a> is given by Kaluaza-Klein-type dimensional reduction along this circle <a class="existingWikiWord" href="/nlab/show/fiber">fiber</a> to a 3-dimensional <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">X_3</annotation></semantics></math> (<a href="#Ginsparg80">Ginsparg 80</a>, <a href="#AppelquistPisarski81">Appelquist-Pisarski 81</a>, <a href="#Nadkarni83">Nadkarni 83</a>, <a href="#Jourjine84">Jourjine 84</a>, <a href="#Nadkarni88">Nadkarni 88</a>).</p>
+
+<p>As usual with <a class="existingWikiWord" href="/nlab/show/KK-reduction">KK-reduction</a>, some care must be exercised to ensure that the compactified theory is itself still a <a class="existingWikiWord" href="/nlab/show/local+field+theory">local field theory</a>. Depending on how exactly one proceeds this may be subtle (<a href="#Landsman89">Landsman 89</a>), but there exist robust approaches (<a href="#Reisz92">Reisz 92</a>, <a href="#KajantieLaineRummukainenShaposhnikov96">Kajantie-Laine-Rummukainen-Shaposhnikov 96</a>).</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -2049,6 +2062,8 @@ margin-left: 0em;
 </ul>
 
 <h2 id="References">References</h2>
+
+<h3 id="general">General</h3>
 
 <p>Reviews include</p>
 
@@ -2130,10 +2145,64 @@ margin-left: 0em;
 <li id="Bartlett13"><a class="existingWikiWord" href="/nlab/show/Bruce+Bartlett">Bruce Bartlett</a>, <em>The geometry of force</em>, Sept 2013 (<a href="https://dl.dropboxusercontent.com/u/56141091/Lorentz.pdf">pdf</a>).</li>
 </ul>
 
-<p>Some variant of KK is discussed in</p>
+<p>Some speculative variant of KK is discussed in</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, Nicholas S. Manton, <a class="existingWikiWord" href="/nlab/show/Bernd+Schroers">Bernd Schroers</a>, <em>Geometric Models of Matter</em> (<a href="http://arxiv.org/abs/1108.5151">arXiv:1108.5151</a>)</li>
+</ul>
+
+<h3 id="ReferencesInWickrotatedThermalFieldTheory">In Wick-rotated thermal field theory</h3>
+
+<p>Discussion of Kaluza-Klein-style dimensional reduction in <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotated</a> <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">thermal field theory</a> on a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> of compact/periodic Euclidean time <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow><annotation encoding="application/x-tex">S^1_\beta</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta = 1/T</annotation></semantics></math> (see at <em><a class="existingWikiWord" href="/nlab/show/infinite-temperature+thermal+field+theory">infinite-temperature thermal field theory</a></em>):</p>
+
+<ul>
+<li id="Ginsparg80">
+<p><a class="existingWikiWord" href="/nlab/show/Paul+Ginsparg">Paul Ginsparg</a>, <em>First and second order phase transitions in gauge theories at finite temperature</em>, Nuclear Physics B Volume 170, Issue 3, 15 December 1980, Pages 388-408 (<a href="https://doi.org/10.1016/0550-3213(80)90418-6">doi:10.1016/0550-3213(80)90418-6</a>)</p>
+</li>
+
+<li id="AppelquistPisarski81">
+<p>Thomas Appelquist, Robert D. Pisarski, <em>High-temperature Yang-Mills theories and three-dimensional quantum chromodynamics</em>, Phys. Rev. D 23, 2305 (1981) (<a href="https://doi.org/10.1103/PhysRevD.23.2305">doi:10.1103/PhysRevD.23.2305</a>)</p>
+</li>
+
+<li id="Nadkarni83">
+<p>Sudhir Nadkarni, <em>Dimensional reduction in finite-temperature quantum chromodynamics</em>, Phys. Rev. D 27, 917 (1983) (<a href="https://doi.org/10.1103/PhysRevD.27.917">doi:10.1103/PhysRevD.27.917</a>)</p>
+</li>
+
+<li id="Nadkarni88">
+<p>Sudhir Nadkarni, <em>Dimensional reduction in finite-temperature quantum chromodynamics. II</em>, Phys. Rev. D 38, 3287 (1988) (<a href="https://doi.org/10.1103/PhysRevD.38.3287">doi:10.1103/PhysRevD.38.3287</a>)</p>
+</li>
+
+<li id="Jourjine84">
+<p>Alexander N Jourjine, <em>Quantum field theory in the infinite temperature limit</em>, Annals of Physics Volume 155, Issue 2, July 1984, Pages 305-332 (<a href="https://doi.org/10.1016/0003-4916(84)90003-4">doi:10.1016/0003-4916(84)90003-4</a>)</p>
+</li>
+
+<li id="Landsman89">
+<p><a class="existingWikiWord" href="/nlab/show/Klaas+Landsman">Klaas Landsman</a>, <em>Limitations to dimensional reduction at high temperature</em>, Nuclear Physics B Volume 322, Issue 2, 14 August 1989, Pages 498-530 (<a href="https://doi.org/10.1016/0550-3213(89)90424-0">doi:10.1016/0550-3213(89)90424-0</a>)</p>
+</li>
+
+<li id="Reisz92">
+<p>T. Reisz, <em>Realization of dimensional reduction at high temperature</em>, Z. Phys. C - Particles and Fields (1992) 53: 169 (<a href="https://doi.org/10.1007/BF01483886">doi:10.1007/BF01483886</a>)</p>
+</li>
+
+<li id="Braaten95">
+<p>Eric Braaten, <em>Solution to the Perturbative Infrared Catastrophe of Hot Gauge Theories</em>, Phys. Rev. Lett. 74, 2164 (1995) (<a href="https://doi.org/10.1103/PhysRevLett.74.2164">doi:10.1103/PhysRevLett.74.2164</a>)</p>
+</li>
+
+<li id="KajantieLaineRummukainenShaposhnikov96">
+<p>K. Kajantie, M. Laine, K. Rummukainen, M. Shaposhnikov, <em>Generic rules for high temperature dimensional reduction and their application to the standard model</em>, Nuclear Physics B Volume 458, Issues 1–2, 1 January 1996, Pages 90-136 (<a href="https://doi.org/10.1016/0550-3213(95)00549-8">doi:10.1016/0550-3213(95)00549-8</a>)</p>
+</li>
+</ul>
+
+<p>and specifically with an eye to discussion of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> in</p>
+
+<ul>
+<li id="BlaizotIancuRebhan03">
+<p>Jean-Paul Blaizot, Edmond Iancu, Anton Rebhan, section 2.2.4 of <em>Thermodynamics of the high temperature quark gluon plasma</em>, Quark–Gluon Plasma 3, pp. 60-122 (2004) (<a href="https://arxiv.org/abs/hep-ph/0303185">arXiv:hep-ph/0303185</a>, <a href="http://inspirehep.net/record/615570">spire:615570</a>)</p>
+</li>
+
+<li id="Blaizot04">
+<p>Jean-Paul Blaizot, around p. 17 of <em>Thermodynamics of the high temperature Quark-Gluon Plasma</em>, AIP Conf. Proc. 739, 63-96 (2004) (<a href="https://doi.org/10.1063/1.1843592">doi:10.1063/1.1843592</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -2141,14 +2210,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 03:28:30.
+  Last revised on November 17, 2018 at 10:03:27.
   See the <a href="https://ncatlab.org/nlab/history/Kaluza-Klein mechanism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kaluza-Klein+mechanism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+mechanism/45" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(45 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+mechanism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+mechanism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kaluza-Klein+mechanism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+mechanism/46" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(46 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+mechanism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+mechanism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Kaluza-Klein mechanism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
